tests/test_files/errors/deep_include.over
include:
    # Blocks of 64
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<

    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<

    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<

    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
    <<<<<<<<
